# http_server

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/protocols/http/: CMakeLists.txt  Http.cpp  Http.hpp
src/protocols/http/pages/: IPage.h
src/protocols/http/pages/displ/: DisplPage.cpp  DisplPage.h  DisplPageRenderer.cpp  DisplPageRenderer.h
src/protocols/http/pages/main/: MainPage.cpp  MainPage.h  MainPageRenderer.cpp  MainPageRenderer.h
src/protocols/http/utils/: HttpHeaders.cpp  HttpHeaders.h  html.cpp  html.h
src/server/: CMakeLists.txt  Http.cpp  Http.hpp  server.h
test/ut/: CMakeLists.txt
test/ut/server/: CMakeLists.txt  HttpTests.cpp
